--- a/src/app/modules/pro/channel/footer/footer.component.scss
+++ b/src/app/modules/pro/channel/footer/footer.component.scss
@@ -9,6 +9,12 @@
       margin: 8px 16px;
       vertical-align: middle;
     }
+    a.m-proChannelFooter__link {
+      color: var(--m-pro--text-color);
+      &:hover {
+        color: var(--m-pro--primary-color);
+      }
+    }
 
     img {
       height: 24px;
@@ -25,22 +31,21 @@
     margin-bottom: 16px;
 
     .m-proChannelFooter__text {
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
+      font-size: 19px;
+      font-weight: 400;
     }
   }
 
   a {
     cursor: pointer;
     text-decoration: none;
-
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
+    font-size: 19px;
+    font-weight: 400;
   }
 
   minds-button-user-dropdown {
     button.material-icons {
-      border: none;
+      border: none !important;
       color: var(--m-pro--text-color) !important;
     }
 
