--- a/src/app/modules/pro/channel/search-box/search-box.component.html
+++ b/src/app/modules/pro/channel/search-box/search-box.component.html
@@ -1,5 +1,7 @@
-<div class="mdl-textfield mdl-js-textfield m-pro__searchBox">
-  <i class="material-icons search">search</i>
+<div
+  class="mdl-textfield mdl-js-textfield m-pro__searchBox"
+  [ngClass]="{ hasQuery: query }"
+>
   <input
     [ngModel]="query"
     (ngModelChange)="queryChange.emit($event)"
@@ -8,9 +10,8 @@
     class="mdl-textfield__input ng-pristine ng-valid ng-touched"
     type="text"
     (keyup.enter)="onSearch.emit()"
+    placeholder="Search"
   />
-  <ng-container *ngIf="query">
-    <i class="material-icons clear" (click)="onClearSearch.emit()">close</i>
-  </ng-container>
+  <i class="material-icons clear" (click)="onClearSearch.emit()">close</i>
   <label class="mdl-textfield__label" for="search"></label>
 </div>
