(feat): Prompt if already have a subscription tier - closes #3555

--- a/src/app/modules/channels/v2/shop/memberships/support-tier.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/support-tier.component.html
@@ -87,11 +87,15 @@
     </a>
 
     <a
-      *ngIf="!isOwner"
+      *ngIf="!isOwner && !supportTier.subscription_urn"
       class="m-cardButton-v2"
       (click)="onSelectIntent.emit(supportTier)"
     >
       Join
+    </a>
+
+    <a *ngIf="!isOwner && supportTier.subscription_urn" class="m-cardButton-v2">
+      Cancel
     </a>
   </div>
 </div>
