--- a/src/app/modules/channels/v2/actions/menu.component.html
+++ b/src/app/modules/channels/v2/actions/menu.component.html
@@ -7,21 +7,23 @@
 
 <ng-template #actionsDropdown>
   <ul>
-    <li
-      *ngIf="service.isSubscribed$ | async; else subscribeOption"
-      (click)="unsubscribe()"
-    >
-      <span class="m-dropdownMenu__item">
-        <span i18n="@@COMMON__UNSUBSCRIBE">Unsubscribe</span>
-      </span>
-    </li>
-    <ng-template #subscribeOption>
-      <li (click)="subscribe()">
+    <ng-container *ngIf="!(service.isDisabled$ | async)">
+      <li
+        *ngIf="service.isSubscribed$ | async; else subscribeOption"
+        (click)="unsubscribe()"
+      >
         <span class="m-dropdownMenu__item">
-          <span i18n="@@COMMON__SUBSCRIBE">Subscribe</span>
+          <span i18n="@@COMMON__UNSUBSCRIBE">Unsubscribe</span>
         </span>
       </li>
-    </ng-template>
+      <ng-template #subscribeOption>
+        <li (click)="subscribe()">
+          <span class="m-dropdownMenu__item">
+            <span i18n="@@COMMON__SUBSCRIBE">Subscribe</span>
+          </span>
+        </li>
+      </ng-template>
+    </ng-container>
 
     <!-- ******** admin block ******** -->
     <ng-container *ngIf="service.isAdmin$ | async">
@@ -122,7 +124,7 @@
       </li>
     </ng-template>
 
-    <li (click)="report()">
+    <li (click)="report()" *ngIf="!(service.isDisabled$ | async)">
       <span class="m-dropdownMenu__item">
         <span i18n="@@MINDS_BUTTON__USER_DROPDOWN__REPORT">Report</span>
       </span>
