--- a/src/app/modules/pro/channel/home/home.component.html
+++ b/src/app/modules/pro/channel/home/home.component.html
@@ -13,7 +13,7 @@
       <m-proChannel__contentList
         type="activities"
         [limit]="12"
-        [canAutoScroll]="true"
+        [canAutoScroll]="false"
       >
       </m-proChannel__contentList>
     </div>
