--- a/src/app/modules/wire/v2/creator/support-tier-confirmation/support-tier-confirmation.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/support-tier-confirmation/support-tier-confirmation.component.ng.scss
@@ -21,6 +21,10 @@
     padding-bottom: 0;
   }
 
+  .m-wireCreatorSupportTierConfirmation__titleRow {
+    align-items: center;
+  }
+
   .m-wireCreatorSupportTierConfirmation__tierDescription {
     margin-bottom: 0;
     padding-left: 20px;
