(chore): cleanup dark-mode feature flag

--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
@@ -69,7 +69,7 @@
       </a>
     </li>
 
-    <ng-container *mIfFeature="'dark-mode'">
+    <ng-container>
       <li
         class="m-dropdownList__item m-userMenuDropdown__item"
         *ngIf="getCurrentUser()"
