--- a/src/app/modules/newsfeed/feeds/sorted.component.html
+++ b/src/app/modules/newsfeed/feeds/sorted.component.html
@@ -5,12 +5,9 @@
       class="m-feeds-sorted__SearchBox"
     ></m-search--bar>
 
-    <ng-container *mIfFeature="'activity-composer'; else v1NewsfeedPoster">
+    <ng-container>
       <m-composer (onPost)="prepend($event)"></m-composer>
     </ng-container>
-    <ng-template #v1NewsfeedPoster>
-      <minds-newsfeed-poster (load)="prepend($event)"></minds-newsfeed-poster>
-    </ng-template>
 
     <div class="m-feeds-sorted__query" *ngIf="query">
       <span
