--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -9,19 +9,12 @@
     >
   </div>
 
-  <ng-container *mIfFeature="'activity-composer'; else v1NewsfeedPoster">
+  <ng-container>
     <m-composer
       [activity]="message ? { message: message } : undefined"
       #composer
     ></m-composer>
   </ng-container>
-  <ng-template #v1NewsfeedPoster>
-    <minds-newsfeed-poster
-      (load)="prepend($event)"
-      [message]="message"
-      #poster
-    ></minds-newsfeed-poster>
-  </ng-template>
 
   <div class="minds-list">
     <ng-container *ngFor="let preActivity of prepended">
