--- a/src/app/modules/newsfeed/feeds/top.component.html
+++ b/src/app/modules/newsfeed/feeds/top.component.html
@@ -1,10 +1,7 @@
 <div class="minds-list">
-  <ng-container *mIfFeature="'activity-composer'; else v1NewsfeedPoster">
+  <ng-container>
     <m-composer (onPost)="prepend($event)"></m-composer>
   </ng-container>
-  <ng-template #v1NewsfeedPoster>
-    <minds-newsfeed-poster (load)="prepend($event)"></minds-newsfeed-poster>
-  </ng-template>
 
   <minds-activity
     *ngFor="let activity of newsfeed; let i = index"
