--- a/src/app/modules/pro/channel/join-button/join-button.component.html
+++ b/src/app/modules/pro/channel/join-button/join-button.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="lowestSupportTier$ | async as lowestSupportTier">
+<ng-container *ngIf="!userAlreadySubscribed && lowestSupportTier">
   <m-shadowboxSubmitButton (click)="join()" i18n="@@M_PRO__JOIN_NOW"
     >JOIN NOW</m-shadowboxSubmitButton
   ></ng-container
