--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -38,9 +38,12 @@
     <div class="m-pageLayoutPane__inner">
       <m-channelAbout__brief></m-channelAbout__brief>
       <ng-container *mIfBrowser>
-        <m-channelShop__brief
-          *mIfFeature="'paywall-2020'; else wireRewardsBrief"
-        ></m-channelShop__brief>
+        <ng-container *mIfFeature="'paywall-2020'; else wireRewardsBrief">
+          <m-channelShop__lazy
+            component="m-channelShop__brief"
+          ></m-channelShop__lazy>
+        </ng-container>
+
         <ng-template #wireRewardsBrief>
           <m-channelShop__briefWireRewards></m-channelShop__briefWireRewards>
         </ng-template>
