--- a/src/app/modules/channels/v2/shop/brief.component.html
+++ b/src/app/modules/channels/v2/shop/brief.component.html
@@ -6,9 +6,9 @@
   <div class="m-channelShopBrief__title">
     <a
       class="m-channelShopBriefTitle__text"
-      i18n="CHANNEL_V2__BRIEF_WIRE_REWARD__SHOP"
+      i18n="CHANNEL_V2__BRIEF_WIRE_REWARD__SHOP__MEMBERSHIPS"
       [routerLink]="['/', service.username$ | async, 'shop']"
-      >Shop</a
+      >Memberships</a
     >
     <!-- <a
       class="m-channelShopBriefTitle__seeAll"
