--- a/src/app/modules/channels/v2/shop/memberships/memberships.component.ng.scss
+++ b/src/app/modules/channels/v2/shop/memberships/memberships.component.ng.scss
@@ -1,3 +1,5 @@
+@import 'defaults.scss';
+
 .m-channelShop__memberships {
   padding: 20px 0;
 
@@ -13,6 +15,7 @@
     display: inline-flex;
     flex-direction: row;
     align-items: center;
+    flex: 1;
 
     h2 {
       margin: 0 0.35em 0 0;
@@ -58,6 +61,7 @@
     font-weight: normal;
     font-size: 16px;
     cursor: pointer;
+    margin-left: 20px;
 
     @include m-theme() {
       color: themed($m-textColor--primary);
