--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
@@ -26,7 +26,7 @@
         </span>
       </m-formInput__checkbox>
     </div>
-    <div class="m-form__field--textboxToggle">
+    <div class="m-form__field--textboxToggle" hidden>
       <div
         class="m-form__row--label m-composerPopup__text"
         i18n="@@COMPOSER__MONETIZE_PLUS__EXCLUSIVITY_PERIOD"
