--- a/src/app/modules/pro/channel/join-button/join-button.component.html
+++ b/src/app/modules/pro/channel/join-button/join-button.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="!userAlreadySubscribed && lowestSupportTier">
-  <m-shadowboxSubmitButton (click)="join()" i18n="@@M_PRO__JOIN_NOW"
+<ng-container *ngIf="service.showJoinButton$ | async">
+  <m-shadowboxSubmitButton (click)="onClick()" i18n="@@M_PRO__JOIN_NOW"
     >JOIN NOW</m-shadowboxSubmitButton
   ></ng-container
 >
