(chore): lazy load channels

--- a/src/app/modules/channels/v2/shop/brief.component.ng.scss
+++ b/src/app/modules/channels/v2/shop/brief.component.ng.scss
@@ -43,7 +43,7 @@
       margin-bottom: 40px;
 
       .m-channelShopMembershipsSupportTier__description {
-        height: auto;
+        height: auto !important;
       }
 
       .m-channelShopMembershipsSupportTier__actions {
