(feat): refactor the youtube import auth flow to be based on links vs oauth - closes engine#1649

--- a/src/app/modules/media/youtube-migration/youtube-migration.component.ng.scss
+++ b/src/app/modules/media/youtube-migration/youtube-migration.component.ng.scss
@@ -1,4 +1,6 @@
-m-youtubeMigration {
+@import 'defaults.scss';
+
+:host {
   .m-youtubeMigration__notice {
     display: flex;
     justify-content: center;
