--- a/src/app/modules/media/youtube-migration/transfer-status/transfer-status.component.html
+++ b/src/app/modules/media/youtube-migration/transfer-status/transfer-status.component.html
@@ -1,12 +1,12 @@
 <div class="m-youtubeMigration__transferStatusWrapper" *ngIf="init">
   <div class="m-youtubeMigration__transferStats">
-    <div>
+    <div hidden>
       <span>{{ dailyLimit }}</span
       >/day limit ·
     </div>
-    <div>
+    <div hidden>
       <div>
-        <span>{{ counts.queued }}</span> queued ·
+        <span>{{ counts.queued }}</span> queued / transferring
       </div>
       <!-- <div>
         <span>{{ counts.transferring }}</span> transferring
@@ -19,6 +19,7 @@
       'm-youtubeMigration__transferAll--active':
         (importingAllVideos$ | async) || transferringAll
     }"
+    *mIfFeature="'yt-importer-transfer-all'"
     ><ng-container *ngIf="!(importingAllVideo$ | async) && !transferringAll"
       >Transfer all videos</ng-container
     >
