Added fallover feed to pro home

--- a/src/app/modules/pro/channel/home/home.component.html
+++ b/src/app/modules/pro/channel/home/home.component.html
@@ -16,6 +16,13 @@
         [canAutoScroll]="false"
       >
       </m-proChannel__contentList>
+      <m-proChannel__contentList
+        *ngIf="showFeed"
+        type="feed"
+        [limit]="12"
+        [canAutoScroll]="true"
+      >
+      </m-proChannel__contentList>
     </div>
   </div>
 
