--- a/src/app/modules/media/youtube-migration/connect/connect.component.html
+++ b/src/app/modules/media/youtube-migration/connect/connect.component.html
@@ -39,8 +39,22 @@
         >
         <m-icon iconId="content_copy"></m-icon>
       </span>
-      in the description of your youtube channel. <b>NOTE:</b> Placing in the
-      link section will not be detected, it must be placed in the description.
+      in the description of your youtube channel
+      <ng-container *ngIf="channelId.length === 24">
+        <a
+          [href]="
+            'https://www.youtube.com/channel/' +
+            channelId +
+            '/about?disable_polymer=1'
+          "
+          target="_blank"
+          class="m-youtubeMigrationConnect__link"
+        >
+          <b class="m-youtubeMigrationConnect__channelLink">(click here)</b>
+          <m-icon iconId="launch"></m-icon>
+        </a> </ng-container
+      >. <b>NOTE:</b> Placing in the link section will not be detected, it must
+      be placed in the description.
     </p>
 
     <m-shadowboxSubmitButton [saving]="inProgress" (click)="connect()">
