(chore): prevent double tap of auto import if in progress

--- a/src/app/modules/media/youtube-migration/config/config.component.html
+++ b/src/app/modules/media/youtube-migration/config/config.component.html
@@ -25,6 +25,7 @@
                   class="form-control"
                   data-minds="autoImport"
                   [readonly]="inProgress || !init"
+                  (click)="onAutoImportCheckboxClick($event)"
                 />
                 <span class="m-form__customInput__checkbox"></span>
               </label>
